Use new avatar (_config.yml, about.md)

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "486697698_23902698472669601_7707867993410175235_n.jpg"
   name             : "Le Hoang Viet"
   pronouns         : # example: "she/her"  
   bio              : "AI Engineer"
