--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "CV_portrait.jpeg"
   name             : "Le Hoang Viet"
   pronouns         : # example: "she/her"  
   bio              : "AI Engineer"
